--- a/src/app/purchase-show/purchase-show.component.html
+++ b/src/app/purchase-show/purchase-show.component.html
@@ -7,10 +7,6 @@
                     <h3 class="artist-name">{{ event?.performers[0]?.name }}</h3>
                     <p class="event-title">{{ event?.name }}</p>
                     <div class="row">
-                        <!-- commented out for styling -->
-                        <!-- <div class="event-start">
-                            {{ streamingDate(event) }}
-                        </div> -->
                         <div class="event-start-wrapper">
                             <div class="event-start">
                                 <p class="event-date">Coming to Salticorn on
@@ -22,10 +18,6 @@
                         </div>
                     </div>
                     <section class="share d-flex align-items-center">
-                        <!--
-                            <button type="button" class="btn btn-preview" data-bs-toggle="modal" data-bs-target="#previewModal" (click)="openPreview(1)"><img src="../../images/icons/play-circle-outline.svg" alt="play"> Preview</button>
-                        <button type="button" class="btn btn-share" data-bs-toggle="modal" data-bs-target="#shareModal"><img src="../images/icons/share.svg" alt="share"> Share</button>
-                        -->
                         <button type="button" class="btn btn-purchase" data-bs-toggle="modal"
                             data-bs-target="#purchaseModal"> Purchase</button>
                         <button type="button" class="btn btn-preview d-flex align-items-center" data-bs-toggle="modal"
@@ -69,20 +61,10 @@
                             <div class="modal-body">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, at. Ab, natus harum porro voluptatum iure nihil eaque. Suscipit architecto ipsam distinctio dignissimos dolore magnam modi nemo voluptatum similique eveniet. 
                             </div>
-                            <div class="modal-footer border-0">
-                                <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button> -->
-                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!--
-                <div class="get-ticket">
-                <h3 class="title">Get your ticket</h3>
-                <app-ticket [event]="event" [tickets]="event.tickets" *ngIf="event" class="tickets"></app-ticket>
-            </div>
-            -->
         </div>
     </div>
 </div>
@@ -90,7 +72,7 @@
 <!-- Purchase Modal -->
 <div class="modal" id="purchaseModal" tabindex="-1" aria-labelledby="purchaseModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content" *ngIf="paymentStatus === 'open'">
             <div class="modal-header">
                 <h5 class="modal-title" id="purchaseModalLabel">Purchase</h5>
                 <button type="button" class="btn" data-bs-dismiss="modal" aria-label="Close">Cancel</button>
@@ -100,60 +82,36 @@
                 <p class="modal-title payment-title">Payment</p>
                 <p class="body-sub-title">Please enter your card information below</p>
                 <label for="cardName" class="modal-label col-12">Name on card
-                    <input type="text" class="form-control" id="cardName">
+                    <input type="text" class="form-control" id="cardName" [(ngModel)]="nameOnCard">
                 </label>
-                <label for="cardNum" class="modal-label col-12">Card number
-                    <input id="ccn" class="form-control mb-0" type="tel" inputmode="numeric" pattern="[0-9\s]{13,19}"
-                        autocomplete="cc-number" maxlength="19" placeholder="xxxx xxxx xxxx xxxx">
-                </label>
-                <!-- <div class="row save-card-wrapper">
-                    <div class="col-12">
-                        <input class="col-6 form-check-input" type="checkbox" formControlName="store-card" id="storeCard">
-                        <label class="form-check-label" for="storeCard">
-                            <span class="col-6 checkbox-text">Store the card information for faster checkout</span>
-                        </label>
-                    </div>
-                </div> -->
+
+                <div id="card-element">
+                    <!-- Elements will create input elements here -->
+                </div>
+                
                 <div class="dotted-line"></div>
                 <div class="row align-items-center justify-content-between currency col-12 mx-0">
                     <label for="currency" class="modal-label">Currency</label>
                     <select class="form-select " aria-label="Default" id="currency">
                         <option selected>US dollar</option>
-                        <option value="cad">Canadian</option>
-                        <option value="gbp">GBP</option>
-                        <option value="euro">Euro</option>
+                        <option *ngFor="let country of countries">{{ country.name }}</option>
                     </select>
-                </div>
-                <div class="row promo-wrapper align-items-center">
-                    <div class="col-12">
-                        <input class="col-6 form-check-input" type="checkbox" formControlName="promo-code" id="option2" >
-                        <label class="form-check-label" for="option2">
-                            <span class="col-6 checkbox-text">Have a Promo Code?</span>
-                        </label>
-                    </div>
-                    <div class="col-12 promo-field-wrapper">
-                        <div class="input-group">
-                            <input type="text" class="form-control mt-0" placeholder="Enter here" aria-label="Enter here" aria-describedby="button-addon2">
-                            <button class="btn btn-outline-secondary alt-color promo-btn" type="button" id="button-addon2">Apply</button>
-                          </div>
-                    </div>
-                    
                 </div>
                 <div class="subtotals-wrapper">
                     <div class="subtotal-row row">
                         <span class="item-title col-6">Subtotal</span>
-                        <span class="item-cost col-6 text-end">$ 15.00</span>
+                        <span class="item-cost col-6 text-end">{{ cart?.subTotal | currency: 'USD' }}</span>
                     </div>
                     <div class="subtotal-row row">
                         <span class="item-title col-6">Service fee</span>
-                        <span class="item-cost col-6 text-end">$ 15.00</span>
+                        <span class="item-cost col-6 text-end">{{ cart?.serviceFee | currency: 'USD' }}</span>
                     </div>
                     <div class="dotted-line sub-line"></div>
                     <div class="total-wrapper">
                         <div class="subtotal-row row">
                             <span class="item-title item-total col-6">Total</span>
                             <div class="item-cost col-6 text-end">
-                                <p class="total-text">$ 30.00</p>
+                                <p class="total-text">{{ cart?.totalDue | currency: 'USD' }}</p>
                                 <p class="total-subtext">Price including Tax</p>
                             </div>
                         </div>
@@ -167,16 +125,63 @@
                 </div>
             </div>
             <div class="d-grid gap-2 modal-button-footer">
-                <button class="btn show-pay-btn" type="button">Pay With Card</button>
-                <button class="btn show-apple-btn d-flex align-items-center justify-content-center" type="button">Pay
-                    with <span><svg xmlns="http://www.w3.org/2000/svg" width="48.727" height="20"
-                            viewBox="0 0 48.727 20">
-                            <path id="apple-pay"
-                                d="M8.9,9.588a2.989,2.989,0,0,1-2.4,1.134A3.379,3.379,0,0,1,7.363,8.24,3.585,3.585,0,0,1,9.747,7.014,3.619,3.619,0,0,1,8.9,9.587m.83,1.31c-1.325-.076-2.459.754-3.083.754-.64,0-1.6-.716-2.649-.693A3.914,3.914,0,0,0,.68,12.976c-1.432,2.459-.374,6.091,1.012,8.092.678.989,1.485,2.079,2.55,2.041,1.012-.038,1.409-.655,2.627-.655s1.584.655,2.649.64c1.1-.023,1.8-.989,2.474-1.98a8.671,8.671,0,0,0,1.1-2.277,3.6,3.6,0,0,1-2.155-3.266A3.662,3.662,0,0,1,12.685,12.5,3.764,3.764,0,0,0,9.731,10.9m7.644-2.756V22.979h2.306v-5.07h3.19a4.709,4.709,0,0,0,4.956-4.9,4.654,4.654,0,0,0-4.881-4.872H17.374Zm2.306,1.941h2.657c2,0,3.144,1.065,3.144,2.938s-1.142,2.955-3.152,2.955H19.681V10.082ZM32.03,23.093a3.8,3.8,0,0,0,3.4-1.9h.046v1.781H37.6V15.594c0-2.14-1.713-3.524-4.347-3.524-2.444,0-4.255,1.4-4.324,3.32h2.079a2.026,2.026,0,0,1,2.178-1.515c1.409,0,2.2.655,2.2,1.865v.823l-2.877.175c-2.672.16-4.119,1.256-4.119,3.159s1.5,3.2,3.639,3.2Zm.624-1.758c-1.226,0-2.01-.594-2.01-1.493,0-.937.754-1.477,2.193-1.561l2.558-.16v.838A2.5,2.5,0,0,1,32.654,21.335Zm7.8,5.679c2.245,0,3.3-.861,4.225-3.457l4.041-11.343H46.379l-2.71,8.762h-.046l-2.71-8.762H38.508l3.9,10.8-.214.655a1.834,1.834,0,0,1-1.941,1.546c-.183,0-.533-.023-.678-.038v1.781a7.813,7.813,0,0,0,.882.053Z"
-                                transform="translate(0.002 -7.014)" fill="#fff" />
-                        </svg>
-                    </span></button>
+                <button class="btn show-pay-btn" type="button" (click)="pay()">Pay With Card</button>
+                <div id="payment-request-button"></div>
             </div>
         </div>
+        <!-- Successful Payment -->
+        <div class="modal-content" *ngIf="paymentStatus === 'success'">
+            <div class="modal-header">
+                <h5 class="modal-title" id="purchaseModalLabel">Confirmed</h5>
+                <button type="button" class="btn" data-bs-dismiss="modal" aria-label="Close">Close</button>
+            </div>
+            <div class="modal-body">
+                <img src="../images/success.svg" class="success-img">
+                <p class="modal-title payment-title text-center">You've got it!</p>
+                <p class="success-text text-center">Your order was placed successfully.</p>
+                <p class="body-sub-title">Shows that you purchase live forever under My Shows. A live show will move to Library once streamed.</p>                
+                <div class="dotted-line"></div>
+                <div class="subtotals-wrapper">
+                    <div class="total-wrapper">
+                        <div class="subtotal-row row">
+                            <span class="item-title item-total col-6">Total Paid</span>
+                            <div class="item-cost col-6 text-end">
+                                <p class="total-text">{{ cart?.totalDue | currency: 'USD' }}</p>
+                                <p class="total-subtext">Price including Tax</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dotted-line"></div>
+                </div>
+            </div>
+            <div class="d-grid gap-2 modal-button-footer">
+                <button class="btn show-pay-btn" type="button" routerLink="/account/my-shows" data-bs-dismiss="modal">GO TO MY SHOWS</button>
+            </div>
+        </div>
+        <!-- Error Payment -->
+        <div class="modal-content" *ngIf="paymentStatus === 'error'">
+            <div class="modal-header">
+                <h5 class="modal-title" id="purchaseModalLabel">Failed</h5>
+                <button type="button" class="btn" data-bs-dismiss="modal" aria-label="Close">Close</button>
+            </div>
+            <div class="modal-body">
+                <img src="../images/error.svg" class="success-img">
+                <p class="modal-title payment-title text-center">{{ errorMessage }}</p>
+                <p class="error-text" *ngIf="errorCode !== 208">We were unable to proceed with your payment. Please check your card details or try again later.</p>              
+            </div>
+            <div class="d-grid gap-2 modal-button-footer">
+                <button class="btn show-pay-btn" type="button" data-bs-dismiss="modal">RETURN TO CHECKOUT</button>
+            </div>
+        </div>
+        <!-- Processing Payment -->
+        <div class="modal-content" *ngIf="paymentStatus === 'processing'">
+            <div class="modal-header">
+                <h5 class="modal-title" id="purchaseModalLabel">Processing</h5>
+            </div>
+            <div class="modal-body">
+                <div class="loader"></div>          
+            </div>
+        </div>
+
     </div>
 </div>
